# fastapi-starter

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
config/: __init__.py
fastapi_starter/: main.py
fastapi_starter/routers/: health.py
logger/: __init__.py
tests/: context.py  readme.md  test_health.py
