[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["David Harting <david.harting@hey.com>"]
readme = "README.md"
packages = [{include = "fastapi_starter"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
invoke = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
