[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["David Harting <david.harting@hey.com>"]
readme = "README.md"
packages = [{include = "fastapi_starter"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
typer = {extras = ["all"], version = "^0.6.1"}
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pyright = "^1.1.272"
ruff = "^0.0.46"
isort = "^5.10.1"
pytest = "^7.1.3"

[tool.pyright]
strict = ["**/*.py"]
pythonVersion = "3.10"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
